2006-12-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_selected_cell),
	(clearlooks_register_style_classic):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_flat_box):
	* engines/clearlooks/src/clearlooks_types.h:
	- Move selected cell drawing into the style functions.

	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_glossy_draw_menuitem),
	(clearlooks_glossy_draw_selected_cell),
	(clearlooks_register_style_glossy):
	- Add menuitem and selected cell drawing to the glossy theme.

2006-12-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_top_left_highlight):
	- Nicer variable names.

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_copy):
	- Copy the radius option.

2006-12-14  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init), (clearlooks_gtk2_rc_parse_dummy),
	(clearlooks_rc_style_parse), (clearlooks_rc_style_merge):
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters),
	(clearlooks_style_draw_box_gap), (clearlooks_style_draw_extension),
	(clearlooks_style_draw_handle), (clearlooks_style_draw_box),
	(clearlooks_style_init_from_rc), (clearlooks_style_copy),
	(clearlooks_style_draw_render_icon):
	* engines/clearlooks/src/clearlooks_style.h:
	* engines/clearlooks/src/clearlooks_types.h:
	- Remove unused options, the engine now warns about their usage.
	- Also removed some commentted out code, and clarified a few
	comments.

	* themes/Clearlooks/gtk-2.0/gtkrc:
	- Remove options that don't have any effect.

2006-12-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/clearlooks_types.h:
	- Remove arrow drawing code